<resources>
    <string name="app_name">LP3</string>
    <string name="action_settings">Settings</string>
    <string name="message_ususario">Usuario</string>
    <string name="message_password">Password</string>
    <string name="btn_ingresar">Ingresar</string>
    <string name="btn_calculadora">Calculadora</string>
    <string name="btn_juego">Juego</string>
    <string name="title_activity_main_menu">MainMenu</string>
    <string name="title_activity_main_calculadora">MainCalculadora</string>

    <string name="message_01">1</string>
    <string name="message_02">2</string>
    <string name="message_03">3</string>
    <string name="message_04">4</string>
    <string name="message_05">5</string>
    <string name="message_06">6</string>
    <string name="message_07">7</string>
    <string name="message_08">8</string>
    <string name="message_09">9</string>
    <string name="message_0">0</string>

    <string name="message_sum">+</string>
    <string name="message_rest">-</string>
    <string name="message_mult">*</string>
    <string name="message_divc">/</string>
    <string name="message_igual">=</string>
    <string name="message_raiz">x/</string>
    <string name="message_vlab">|x|</string>
    <string name="message_clean">AC</string>
    <string name="message_log">Log</string>
    <string name="message_sin">Sen</string>
    <string name="message_cos">Cos</string>
    <string name="message_tag">Tan</string>
    <string name="message_ptc">x^2</string>
    <string name="message_ptcx">x^y</string>
    <string name="title_activity_juego">Juego</string>
    <string name="title_activity_main2">Main2</string>
    <string name="title_activity_main3">Main3</string>
    <string name="title_activity_main4">Main4</string>
    <string name="title_activity_main5">Main5</string>
    <string name="title_activity_main_juego">MainJuego</string>
    <string name="title_activity_clave">Clave</string>


</resources>
