<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fondo2"
    app:layout_behavior="@string/appbar_scrolling_view_behavior"
    tools:context="com.example.lesly.lp3.MainCalculadora"
    tools:showIn="@layout/activity_main_calculadora">

    <Button
        android:id="@+id/btn01"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_01"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/btn02"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_02"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/btn03"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_03"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintVertical_bias="0.188" />

    <Button
        android:id="@+id/btn04"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_04"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintVertical_bias="0.346" />

    <Button
        android:id="@+id/btn05"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_05"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintVertical_bias="0.346" />

    <Button
        android:id="@+id/btn06"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_06"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346"
        app:layout_constraintHorizontal_bias="0.614" />

    <Button
        android:id="@+id/btn07"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_07"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintVertical_bias="0.505" />

    <Button
        android:id="@+id/btn08"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_08"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintVertical_bias="0.505" />

    <Button
        android:id="@+id/btn09"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_09"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.614"
        app:layout_constraintVertical_bias="0.505" />

    <Button
        android:id="@+id/btn0"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_0"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintVertical_bias="0.664" />


    <EditText
        android:id="@+id/txtDisplay"
        android:layout_width="368dp"
        android:layout_height="wrap_content"
        android:ems="10"
        android:inputType="textPersonName"
        android:text=""
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.034" />

    <Button
        android:id="@+id/btnSum"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_sum"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.188"
        app:layout_constraintHorizontal_bias="0.837" />

    <Button
        android:id="@+id/btnRest"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_rest"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.346"
        app:layout_constraintHorizontal_bias="0.837" />

    <Button
        android:id="@+id/btnMult"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_mult"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.505"
        app:layout_constraintHorizontal_bias="0.837" />

    <Button
        android:id="@+id/btnDivc"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_divc"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664"
        app:layout_constraintHorizontal_bias="0.837" />

    <Button
        android:id="@+id/btnIgual"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_igual"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.664"
        app:layout_constraintHorizontal_bias="0.614" />

    <Button
        android:id="@+id/btnClean"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_clean"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintVertical_bias="0.664" />

    <Button
        android:id="@+id/btnLog"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_log"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintVertical_bias="0.981" />

    <Button
        android:id="@+id/btnSin"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_sin"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823"
        app:layout_constraintHorizontal_bias="0.391" />

    <Button
        android:id="@+id/btnTan"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_cos"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823"
        app:layout_constraintHorizontal_bias="0.614" />

    <Button
        android:id="@+id/btnCos"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_tag"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.168"
        app:layout_constraintVertical_bias="0.823" />

    <Button
        android:id="@+id/btnPtc"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_ptc"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintHorizontal_bias="0.391"
        app:layout_constraintVertical_bias="0.981" />

    <Button
        android:id="@+id/btnPtcx"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_ptcx"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981"
        app:layout_constraintHorizontal_bias="0.614" />

    <Button
        android:id="@+id/btnRaiz"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_raiz"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.823"
        app:layout_constraintHorizontal_bias="0.837" />

    <Button
        android:id="@+id/btnVlAb"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:text="@string/message_vlab"
        android:background="@color/boton2"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.981"
        app:layout_constraintHorizontal_bias="0.837" />

</android.support.constraint.ConstraintLayout>
